# GreenBondV2

./: .env.example  README.md  foundry.toml  pyproject.toml
.github/workflows/: test.yml
broadcast/Deploy.s.sol/42161/: run-1699109787.json  run-latest.json
broadcast/DeployAvalanche.s.sol/43114/: run-1705309277.json  run-1705309284.json  run-1705309303.json
docs/: book.toml  test-results.md
docs/book/: 404.html  GOV.html  PROJECT_FINANCE.html  TECH_OVERVIEW.html  XSTRUCTURE.html  index.html  print.html  searchindex.js  searchindex.json
docs/book/src/GreenBondV2.sol/: contract.GreenBondV2.html
docs/book/src/interfaces/: index.html
docs/book/src/interfaces/IL2Encoder.sol/: interface.IL2Encoder.html
docs/book/src/interfaces/IL2Pool.sol/: interface.IL2Pool.html
docs/src/: GOV.md  PROJECT_FINANCE.md  README.md  SUMMARY.md  TECH_OVERVIEW.md  XSTRUCTURE.md
docs/src/src/: README.md
docs/src/src/GreenBondV2.sol/: contract.GreenBondV2.md
docs/src/src/interfaces/: README.md
docs/src/src/interfaces/IL2Encoder.sol/: interface.IL2Encoder.md
docs/src/src/interfaces/IL2Pool.sol/: interface.IL2Pool.md
script/: Deploy.s.sol  DeployAvalanche.s.sol  deploy.sh  deployAvalanche.sh
src/: GreenBondV2.sol  GreenBondV2Avalanche.sol
src/interfaces/: IL2Encoder.sol  IL2Pool.sol
test/: ERC4626.t.sol  GreenBondV2.t.sol  GreenBondV2Avalanche.t.sol
