[tool.poetry]
name = "greenbond2"
version = "0.1.0"
description = ""
authors = ["sandybradley <sandy.bradley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slither-analyzer = "^0.10.0"
openai = "0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
